美化ewsd-bootstrap主题样式

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,8 +10,8 @@
     <!-- EasyUI样式 -->
     <!--<link type="text/css" rel="stylesheet" id="easyuiTheme" href="./topjui/themes/default/easyui.css">-->
     <!-- TopJUI样式 -->
-    <link href="./topjui/themes/ymnets/base/easyui.css" rel="stylesheet" />
-    <link id="easyuiTheme" href="./topjui/themes/ymnets/greenlight.css" rel="stylesheet" />
+    <link href="./topjui/themes/ewsd-bootstrap/base/easyui.css" rel="stylesheet" />
+    <link id="easyuiTheme" href="./topjui/themes/ewsd-bootstrap/greenlight.css" rel="stylesheet" />
     <link type="text/css" rel="stylesheet" href="./topjui/css/topjui.all.min.css">
     <link href="./topjui/content/Site.css" rel="stylesheet" />
     <link href="./topjui/content/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
@@ -84,7 +84,7 @@
         </table>
     </div>
 
-    <div data-options="region:'west',split:true,width:230" title="轻松工作，快乐办公！" iconCls="fa fa-dashboard"
+    <div id="west" data-options="region:'west',split:true,width:230" title="轻松工作，快乐办公！" iconCls="fa fa-dashboard"
          style="overflow:hidden;" align="left">
         <div id="RightAccordion" class="easyui-accordion"></div>
         <!--<div id="menuTab" class="easyui-tabs" data-options="fit:true,border:false">
