--- a/demo/index.html
+++ b/demo/index.html
@@ -10,11 +10,11 @@
     <!-- EasyUI样式 -->
     <!--<link type="text/css" rel="stylesheet" id="easyuiTheme" href="./topjui/themes/default/easyui.css">-->
     <!-- TopJUI样式 -->
-    <link href="./topjui/themes/ewsd-bootstrap/base/easyui.css" rel="stylesheet" />
-    <link id="easyuiTheme" href="./topjui/themes/ewsd-bootstrap/greenlight.css" rel="stylesheet" />
+    <link href="./topjui/themes/ewsd-bootstrap/base/easyui.css" rel="stylesheet"/>
+    <link id="easyuiTheme" href="./topjui/themes/ewsd-bootstrap/greenlight.css" rel="stylesheet"/>
     <link type="text/css" rel="stylesheet" href="./topjui/css/topjui.all.min.css">
-    <link href="./topjui/content/Site.css" rel="stylesheet" />
-    <link href="./topjui/content/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="./topjui/content/Site.css" rel="stylesheet"/>
+    <link href="./topjui/content/fontawesome/css/font-awesome.min.css" rel="stylesheet"/>
     <!--<script src="./topjui/content/js/home.js"></script>
     <script src="./topjui/content/js/common.js"></script>-->
 
@@ -50,14 +50,51 @@
 </div>
 
 <div id="index_layout">
-    <div id="north" data-options="region:'north',border:false,split:false" style="height: 50px; padding:0;margin:0; overflow: hidden;">
+    <div id="north" data-options="region:'north',border:false,split:false"
+         style="height: 50px; padding:0;margin:0; overflow: hidden;">
         <table class="banner" style="border-spacing:0px;">
             <tr>
                 <td class="webname">
-                    <span class="fa fa-yelp" style="font-size:26px; padding-right:8px;"></span>TopJUI前端框架
+                    <span class="fa fa-envira" style="font-size:26px; padding-right:8px;"></span>TopJUI前端框架
                 </td>
                 <td>
-                    <table id="topmenucontent" cellpadding="0" cellspacing="0"><td id="201605312304598866131890ede44b6" class="topmenu selected"><a onclick="loadAccordionMenu('201605312304598866131890ede44b6')" title="通过顶部菜单" class="l-btn-text bannerMenu" href="#"><lable class="fa  fa-hand-pointer-o"></lable><br><span style="white-space:nowrap;">通过顶部菜单</span></a></td><td id="20161124112512659817453d009fb84" class="topmenu"><a onclick="loadAccordionMenu('20161124112512659817453d009fb84')" title="调用方法" class="l-btn-text bannerMenu" href="#"><lable class="fa fa-puzzle-piece"></lable><br><span style="white-space:nowrap;">调用方法</span></a></td><td id="201407241558264790957ebaf9fec63" class="topmenu"><a onclick="loadAccordionMenu('201407241558264790957ebaf9fec63')" title="loadAccordionMenu" class="l-btn-text bannerMenu" href="#"><lable class="fa fa-sort-amount-asc"></lable><br><span style="white-space:nowrap;">loadAccordionMenu</span></a></td><td id="2016112411022140581745f0f582911" class="topmenu"><a onclick="loadAccordionMenu('2016112411022140581745f0f582911')" title="异步加载" class="l-btn-text bannerMenu" href="#"><lable class="fa  fa-weixin"></lable><br><span style="white-space:nowrap;">异步加载</span></a></td><td id="SystemManage" class="topmenu"><a onclick="loadAccordionMenu('SystemManage')" title="左边手风琴" class="l-btn-text bannerMenu" href="#"><lable class="fa fa-gears"></lable><br><span style="white-space:nowrap;">左边手风琴</span></a></td><td id="20161124111315488817464f920b54f" class="topmenu"><a onclick="loadAccordionMenu('20161124111315488817464f920b54f')" title="菜单" class="l-btn-text bannerMenu" href="#"><lable class="fa  fa-shield"></lable><br><span style="white-space:nowrap;">菜单</span></a></td><td id="201611241112087878174673e7fccb2" class="topmenu"><a onclick="loadAccordionMenu('201611241112087878174673e7fccb2')" title="OK！" class="l-btn-text bannerMenu" href="#"><lable class="fa  fa-bug"></lable><br><span style="white-space:nowrap;">或树形菜单</span></a></td></table>
+                    <table id="topmenucontent" cellpadding="0" cellspacing="0">
+                        <td id="1325" title="静态演示" class="topmenu selected systemName">
+                            <a class="l-btn-text bannerMenu" href="#">
+                                <lable class="fa  fa-hand-pointer-o"></lable>
+                                <br><span style="white-space:nowrap;">静态演示</span>
+                            </a>
+                        </td>
+                        <td id="60" title="开发文档" class="topmenu systemName">
+                            <a class="l-btn-text bannerMenu" href="#">
+                                <lable class="fa fa-puzzle-piece"></lable>
+                                <br><span style="white-space:nowrap;">开发文档</span>
+                            </a>
+                        </td>
+                        <td id="" title="人力资源" class="topmenu systemName">
+                            <a class="l-btn-text bannerMenu" href="#">
+                                <lable class="fa fa-sort-amount-asc"></lable>
+                                <br><span style="white-space:nowrap;">人力资源</span>
+                            </a>
+                        </td>
+                        <td id="" title="财务管理" class="topmenu systemName">
+                            <a class="l-btn-text bannerMenu" href="#">
+                                <lable class="fa  fa-weixin"></lable>
+                                <br><span style="white-space:nowrap;">财务管理</span></a>
+                        </td>
+                        <td id="" title="业务系统" class="topmenu systemName">
+                            <a class="l-btn-text bannerMenu" href="#">
+                                <lable class="fa fa-gears"></lable>
+                                <br><span style="white-space:nowrap;">业务系统</span>
+                            </a>
+                        </td>
+                        <td id="" title="系统设置" class="topmenu systemName">
+                            <a class="l-btn-text bannerMenu" href="#">
+                                <lable class="fa  fa-shield"></lable>
+                                <br><span style="white-space:nowrap;">系统设置</span>
+                            </a>
+                        </td>
+                    </table>
                 </td>
                 <td>&nbsp;</td>
                 <td style="width: 40px;">
@@ -125,34 +162,48 @@
 </div>
 <![endif]-->
 
-<div id="ModalStyle" class="easyui-dialog" style="width:600px;height:340px" data-options="iconCls:'fa fa-save',modal:true,closed:true">
+<div id="ModalStyle" class="easyui-dialog" style="width:600px;height:340px"
+     data-options="iconCls:'fa fa-save',modal:true,closed:true">
     <table style="width:100%; padding:20px; line-height:30px;text-align:center;">
         <tr>
-            <td><img src="../../topjui/content/images/skin/skin-coolblack.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="black" checked="checked" /></td>
-            <td><img src="../../topjui/content/images/skin/skin-red.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="red" /></td>
-            <td><img src="../../topjui/content/images/skin/skin-green.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="green" /></td>
-            <td><img src="../../topjui/content/images/skin/skin-purple.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="purple" /></td>
-            <td><img src="../../topjui/content/images/skin/skin-blue.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="blue" /></td>
-            <td><img src="../../topjui/content/images/skin/skin-yellow.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="yellow" /></td>
+            <td><img src="../../topjui/content/images/skin/skin-coolblack.png"
+                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="black"
+                                                                  checked="checked"/></td>
+            <td><img src="../../topjui/content/images/skin/skin-red.png" style="width:60px;height:30px;"/><br/><input
+                    type="radio" name="themes" value="red"/></td>
+            <td><img src="../../topjui/content/images/skin/skin-green.png" style="width:60px;height:30px;"/><br/><input
+                    type="radio" name="themes" value="green"/></td>
+            <td><img src="../../topjui/content/images/skin/skin-purple.png" style="width:60px;height:30px;"/><br/><input
+                    type="radio" name="themes" value="purple"/></td>
+            <td><img src="../../topjui/content/images/skin/skin-blue.png" style="width:60px;height:30px;"/><br/><input
+                    type="radio" name="themes" value="blue"/></td>
+            <td><img src="../../topjui/content/images/skin/skin-yellow.png" style="width:60px;height:30px;"/><br/><input
+                    type="radio" name="themes" value="yellow"/></td>
         </tr>
         <tr>
-            <td><img src="../../topjui/content/images/skin/skin-coolblacklight.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="blacklight" /></td>
-            <td><img src="../../topjui/content/images/skin/skin-redlight.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="redlight" /></td>
-            <td><img src="../../topjui/content/images/skin/skin-greenlight.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="greenlight" /></td>
-            <td><img src="../../topjui/content/images/skin/skin-purplelight.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="purplelight" /></td>
-            <td> <img src="../../topjui/content/images/skin/skin-bluelight.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="bluelight" /></td>
-            <td><img src="../../topjui/content/images/skin/skin-yellowlight.png" style="width:60px;height:30px;" /><br /><input type="radio" name="themes" value="yellowlight" /></td>
+            <td><img src="../../topjui/content/images/skin/skin-coolblacklight.png"
+                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="blacklight"/></td>
+            <td><img src="../../topjui/content/images/skin/skin-redlight.png"
+                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="redlight"/></td>
+            <td><img src="../../topjui/content/images/skin/skin-greenlight.png"
+                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="greenlight"/></td>
+            <td><img src="../../topjui/content/images/skin/skin-purplelight.png"
+                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="purplelight"/></td>
+            <td><img src="../../topjui/content/images/skin/skin-bluelight.png"
+                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="bluelight"/></td>
+            <td><img src="../../topjui/content/images/skin/skin-yellowlight.png"
+                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="yellowlight"/></td>
         </tr>
     </table>
     <table style="width: 100%; padding: 20px; line-height: 30px; text-align: center;">
         <tr>
             <td>
-                <input type="radio" name="menustyle" value="accordion" checked="checked" />手风琴
+                <input type="radio" name="menustyle" value="accordion" checked="checked"/>手风琴
             <td>
-                <input type="radio" name="menustyle" value="tree" />树形
+                <input type="radio" name="menustyle" value="tree"/>树形
             </td>
             <td>
-                <input type="checkbox" checked="checked" name="topmenu" value="topmenu" />开启顶部菜单
+                <input type="checkbox" checked="checked" name="topmenu" value="topmenu"/>开启顶部菜单
             </td>
         </tr>
     </table>
