优化标签样式

--- a/demo/index.html
+++ b/demo/index.html
@@ -59,13 +59,13 @@
                 </td>
                 <td>
                     <table id="topmenucontent" cellpadding="0" cellspacing="0">
-                        <td id="1325" title="静态演示" class="topmenu selected systemName">
+                        <td id="1325" title="这只是静态演示" class="topmenu selected systemName">
                             <a class="l-btn-text bannerMenu" href="#">
                                 <lable class="fa  fa-hand-pointer-o"></lable>
                                 <br><span style="white-space:nowrap;">静态演示</span>
                             </a>
                         </td>
-                        <td id="60" title="开发文档" class="topmenu systemName">
+                        <td id="60" title="TopJUI开发文档" class="topmenu systemName">
                             <a class="l-btn-text bannerMenu" href="#">
                                 <lable class="fa fa-puzzle-piece"></lable>
                                 <br><span style="white-space:nowrap;">开发文档</span>
