--- a/demo/index.html
+++ b/demo/index.html
@@ -7,25 +7,20 @@
     <meta name="renderer" content="webkit">
     <!-- 浏览器标签图片 -->
     <link rel="shortcut icon" href="./topjui/image/favicon.ico"/>
-    <!-- EasyUI样式 -->
-    <!--<link type="text/css" rel="stylesheet" id="easyuiTheme" href="./topjui/themes/default/easyui.css">-->
     <!-- TopJUI样式 -->
-    <link href="./topjui/themes/ewsd-bootstrap/base/easyui.css" rel="stylesheet"/>
-    <link id="easyuiTheme" href="./topjui/themes/ewsd-bootstrap/greenlight.css" rel="stylesheet"/>
-    <link type="text/css" rel="stylesheet" href="./topjui/css/topjui.all.min.css">
-    <link href="./topjui/content/Site.css" rel="stylesheet"/>
-    <link href="./topjui/content/fontawesome/css/font-awesome.min.css" rel="stylesheet"/>
-    <!--<script src="./topjui/content/js/home.js"></script>
-    <script src="./topjui/content/js/common.js"></script>-->
-
-    <!-- jQuery核心 -->
+    <link type="text/css" href="./topjui/themes/ewsd/base/easyui.css" rel="stylesheet"/>
+    <link type="text/css" href="./topjui/css/site.css" rel="stylesheet"/>
+    <link type="text/css" href="./topjui/css/style.css" rel="stylesheet"/>
+    <!--<link type="text/css" href="./topjui/css/topjui.all.min.css" rel="stylesheet">-->
+    <link type="text/css" href="./topjui/themes/ewsd/greenlight.css" rel="stylesheet" id="easyuiTheme"/>
+    <link type="text/css" href="./topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
+    <!-- jQuery引入 -->
     <script type="text/javascript" src="./topjui/plugins/easyui/jquery.min.js"></script>
     <script type="text/javascript" src="./topjui/plugins/jquery/jquery.cookie.js"></script>
     <!-- EasyUI核心 -->
     <script type="text/javascript" src="./topjui/plugins/easyui/jquery.easyui.min.js"></script>
     <!-- 首页js -->
     <script type="text/javascript" src="./topjui/js/topjui.index.js" charset="utf-8"></script>
-
     <meta name="keywords" content='easyui,jui,jquery easyui,easyui demo,easyui中文'/>
     <meta name="description" content='TopJUI前端框架，基于最新版EasyUI前端框架构建，纯HTML调用功能组件，不用写JS代码的EasyUI，专注你的后端业务开发！'/>
     <title>TopJUI前端框架静态演示 - 不用写JS代码的EasyUI</title>
@@ -113,7 +108,7 @@
                 </td>
                 <td style="width:180px; overflow:hidden; ">
                     <a id="showUserInfo" style="display:inline-block;" class="fa bannerbtn" href="javascript:void()">
-                        <img src="../../topjui/content/Images/photo.jpg" class="user-image" alt="User Image">
+                        <img src="../../topjui/image/avatar.jpg" class="user-image" alt="User Image">
                         <span class="user-name">TopJUI</span>
                     </a>
                 </td>
@@ -166,32 +161,36 @@
      data-options="iconCls:'fa fa-save',modal:true,closed:true">
     <table style="width:100%; padding:20px; line-height:30px;text-align:center;">
         <tr>
-            <td><img src="../../topjui/content/images/skin/skin-coolblack.png"
+            <td><img src="../../topjui/themes/ewsd/skin/skin-coolblack.png"
                      style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="black"
                                                                   checked="checked"/></td>
-            <td><img src="../../topjui/content/images/skin/skin-red.png" style="width:60px;height:30px;"/><br/><input
+            <td><img src="../../topjui/themes/ewsd/skin/skin-red.png"
+                     style="width:60px;height:30px;"/><br/><input
                     type="radio" name="themes" value="red"/></td>
-            <td><img src="../../topjui/content/images/skin/skin-green.png" style="width:60px;height:30px;"/><br/><input
+            <td><img src="../../topjui/themes/ewsd/skin/skin-green.png" style="width:60px;height:30px;"/><br/><input
                     type="radio" name="themes" value="green"/></td>
-            <td><img src="../../topjui/content/images/skin/skin-purple.png" style="width:60px;height:30px;"/><br/><input
+            <td><img src="../../topjui/themes/ewsd/skin/skin-purple.png"
+                     style="width:60px;height:30px;"/><br/><input
                     type="radio" name="themes" value="purple"/></td>
-            <td><img src="../../topjui/content/images/skin/skin-blue.png" style="width:60px;height:30px;"/><br/><input
+            <td><img src="../../topjui/themes/ewsd/skin/skin-blue.png"
+                     style="width:60px;height:30px;"/><br/><input
                     type="radio" name="themes" value="blue"/></td>
-            <td><img src="../../topjui/content/images/skin/skin-yellow.png" style="width:60px;height:30px;"/><br/><input
+            <td><img src="../../topjui/themes/ewsd/skin/skin-yellow.png"
+                     style="width:60px;height:30px;"/><br/><input
                     type="radio" name="themes" value="yellow"/></td>
         </tr>
         <tr>
-            <td><img src="../../topjui/content/images/skin/skin-coolblacklight.png"
+            <td><img src="../../topjui/themes/ewsd/skin/skin-coolblacklight.png"
                      style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="blacklight"/></td>
-            <td><img src="../../topjui/content/images/skin/skin-redlight.png"
+            <td><img src="../../topjui/themes/ewsd/skin/skin-redlight.png"
                      style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="redlight"/></td>
-            <td><img src="../../topjui/content/images/skin/skin-greenlight.png"
+            <td><img src="../../topjui/themes/ewsd/skin/skin-greenlight.png"
                      style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="greenlight"/></td>
-            <td><img src="../../topjui/content/images/skin/skin-purplelight.png"
+            <td><img src="../../topjui/themes/ewsd/skin/skin-purplelight.png"
                      style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="purplelight"/></td>
-            <td><img src="../../topjui/content/images/skin/skin-bluelight.png"
+            <td><img src="../../topjui/themes/ewsd/skin/skin-bluelight.png"
                      style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="bluelight"/></td>
-            <td><img src="../../topjui/content/images/skin/skin-yellowlight.png"
+            <td><img src="../../topjui/themes/ewsd/skin/skin-yellowlight.png"
                      style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="yellowlight"/></td>
         </tr>
     </table>
