--- a/demo/html/complex/datagrid.html
+++ b/demo/html/complex/datagrid.html
@@ -5,10 +5,10 @@
     <!-- 避免IE使用兼容模式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="renderer" content="webkit">
-    <!-- EasyUI样式 -->
-    <!--<link type="text/css" rel="stylesheet" href="../../topjui/themes/default/easyui.css">-->
     <!-- TopJUI样式 -->
-
+    <link type="text/css" href="../../topjui/css/topjui.all.min.css" rel="stylesheet">
+    <link type="text/css" href="../../topjui/themes/ewsd/greenlight.css" rel="stylesheet" id="easyuiTheme"/>
+    <link type="text/css" href="../../topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- jQuery核心 -->
     <script type="text/javascript" src="../../topjui/plugins/easyui/jquery.min.js"></script>
     <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.cookie.js"></script>
@@ -19,14 +19,6 @@
     <!-- TopJUI框架 -->
     <script type="text/javascript" src="../../topjui/js/topjui.all.js"></script>
     <script type="text/javascript" src="../../topjui/plugins/easyui/locale/easyui-lang-zh_CN.js"></script>
-
-    <link href="../../topjui/themes/ewsd-bootstrap/base/easyui.css" rel="stylesheet" />
-    <link href="../../topjui/themes/ewsd-bootstrap/greenlight.css" rel="stylesheet" />
-    <link type="text/css" rel="stylesheet" href="../../topjui/css/topjui.all.min.css">
-    <link href="../../topjui/content/Site.css" rel="stylesheet" />
-    <link href="../../topjui/content/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
-    <!--<script src="./topjui/content/js/home.js"></script>
-    <script src="./topjui/content/js/common.js"></script>-->
 </head>
 
 <body>
