优化界面风格，调整tabs边框

--- a/demo/html/complex/add.html
+++ b/demo/html/complex/add.html
@@ -34,7 +34,7 @@
         <td>
             <input type="text" name="spec"
                    data-toggle="topjui-combobox"
-                   data-options="valueField:'code',
+                   data-options="required:true,valueField:'code',
                    url:contextPath + '/json/dictionary/models.json'">
         </td>
     </tr>
