--- a/demo/html/complex/datagrid.html
+++ b/demo/html/complex/datagrid.html
@@ -7,7 +7,7 @@
     <meta name="renderer" content="webkit">
     <!-- TopJUI样式 -->
     <link type="text/css" href="../../topjui/css/topjui.all.min.css" rel="stylesheet">
-    <link type="text/css" href="../../topjui/themes/ewsd/greenlight.css" rel="stylesheet" id="easyuiTheme"/>
+    <link type="text/css" href="../../topjui/themes/yushan/topjui.greenlight.css" rel="stylesheet" id="easyuiTheme"/>
     <link type="text/css" href="../../topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- jQuery核心 -->
     <script type="text/javascript" src="../../topjui/plugins/easyui/jquery.min.js"></script>
