--- a/demo/html/new/DataGrid.html
+++ b/demo/html/new/DataGrid.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Basic DataGrid - jQuery EasyUI Demo</title>
-    <link rel="stylesheet" type="text/css" href="../../topjui/themes/ewsd/base/easyui.css">
+    <link rel="stylesheet" type="text/css" href="../../topjui/themes/yushan/topjui.base.css">
 
-    <link rel="stylesheet" type="text/css" href="../../topjui/themes/ewsd/base/site.css">
+    <link rel="stylesheet" type="text/css" href="../../topjui/themes/yushan/base/site.css">
     <script type="text/javascript" src="../../topjui/plugins/easyui/jquery.min.js"></script>
     <script type="text/javascript" src="../../topjui/plugins/easyui/jquery.easyui.min.js"></script>
     <script src="../../topjui/content/js/jquery.easyui.plus.js"></script>
