--- a/demo/html/new/Desktop.html
+++ b/demo/html/new/Desktop.html
@@ -5,9 +5,9 @@
     <script src="../../topjui/plugins/easyui/jquery.min.js"></script>
     <script src="../../topjui/plugins/easyui/jquery.easyui.min.js"></script>
     <script src="../../topjui/content/js/jquery.easyui.plus.js"></script>
-    <link href="../../topjui/themes/ewsd/base/easyui.css" rel="stylesheet" />
-    <link href="../../topjui/themes/ewsd/redlight.css" rel="stylesheet" />
-    <link href="../../topjui/themes/ewsd/base/site.css" rel="stylesheet" />
+    <link href="../../topjui/themes/yushan/topjui.base.css" rel="stylesheet" />
+    <link href="../../topjui/themes/yushan/redlight.css" rel="stylesheet" />
+    <link href="../../topjui/themes/yushan/base/site.css" rel="stylesheet" />
     <link href="../../topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <script src="../../topjui/content/js/echarts.min.js"></script>
     <script src="../../topjui/content/js/echarts.theme.shine.js"></script>
