--- a/demo/html/new/Layout.html
+++ b/demo/html/new/Layout.html
@@ -9,9 +9,9 @@
 
     <script src="../../topjui/plugins/easyui/jquery.min.js"></script>
     <script src="../../topjui/plugins/easyui/jquery.easyui.min.js"></script>
-    <link href="../../topjui/themes/ewsd/base/easyui.css" rel="stylesheet" />
-    <link href="../../topjui/themes/ewsd/greenlight.css" rel="stylesheet" />
-    <link href="../../topjui/themes/ewsd/base/site.css" rel="stylesheet" />
+    <link href="../../topjui/themes/yushan/topjui.base.css" rel="stylesheet" />
+    <link href="../../topjui/themes/yushan/topjui.greenlight.css" rel="stylesheet" />
+    <link href="../../topjui/themes/yushan/base/site.css" rel="stylesheet" />
     <link href="../../topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <script src="../../topjui/content/js/home.js"></script>
     <script src="../../topjui/content/js/common.js"></script>
