--- a/demo/index.html
+++ b/demo/index.html
@@ -8,11 +8,11 @@
     <!-- 浏览器标签图片 -->
     <link rel="shortcut icon" href="./topjui/image/favicon.ico"/>
     <!-- TopJUI样式 -->
-    <link type="text/css" href="./topjui/themes/ewsd/base/easyui.css" rel="stylesheet"/>
+    <link type="text/css" href="./topjui/themes/yushan/topjui.base.css" rel="stylesheet"/>
     <link type="text/css" href="./topjui/css/site.css" rel="stylesheet"/>
     <link type="text/css" href="./topjui/css/style.css" rel="stylesheet"/>
     <!--<link type="text/css" href="./topjui/css/topjui.all.min.css" rel="stylesheet">-->
-    <link type="text/css" href="./topjui/themes/ewsd/greenlight.css" rel="stylesheet" id="easyuiTheme"/>
+    <link type="text/css" href="/topjui/themes/yushan/topjui.greenlight.css" rel="stylesheet" id="easyuiTheme"/>
     <link type="text/css" href="./topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- jQuery引入 -->
     <script type="text/javascript" src="./topjui/plugins/easyui/jquery.min.js"></script>
@@ -104,7 +104,7 @@
                     <a title="等待开放..." class="l-btn-text fa fa-bell-o  fa-lg bannerbtn" href="#"> </a>
                 </td>
                 <td style="width: 80px;">
-                    <a title="切换主题" id="SetThemes" class="l-btn-text fa fa-cogs fa-lg bannerbtn" href="#"> </a>
+                    <a title="切换主题" id="setThemes" class="l-btn-text fa fa-cogs fa-lg bannerbtn" href="#"> </a>
                 </td>
                 <td style="width:180px; overflow:hidden; ">
                     <a id="showUserInfo" style="display:inline-block;" class="fa bannerbtn" href="javascript:void()">
@@ -129,9 +129,9 @@
         </div>-->
 
     </div>
-    <div id="center" data-options="region:'center',border:true">
+    <div id="center" data-options="region:'center',border:false">
         <div id="index_tabs" style="width:100%;height:100%">
-            <div title="系统首页" iconCls="fa fa-home" data-options="border:false,
+            <div title="系统首页" iconCls="fa fa-home" data-options="border:true,
             content:'<iframe src=\'./html/portal/index.html\' scrolling=\'auto\' frameborder=\'0\' style=\'width:100%;height:100%;\'></iframe>'"></div>
         </div>
     </div>
@@ -157,41 +157,58 @@
 </div>
 <![endif]-->
 
-<div id="ModalStyle" class="easyui-dialog" style="width:600px;height:340px"
-     data-options="iconCls:'fa fa-save',modal:true,closed:true">
+<div id="themeStyle" class="easyui-dialog" style="width:600px;height:340px"
+     data-options="iconCls:'fa fa-save',modal:false,closed:true">
     <table style="width:100%; padding:20px; line-height:30px;text-align:center;">
         <tr>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-coolblack.png"
-                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="black"
-                                                                  checked="checked"/></td>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-red.png"
-                     style="width:60px;height:30px;"/><br/><input
-                    type="radio" name="themes" value="red"/></td>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-green.png" style="width:60px;height:30px;"/><br/><input
-                    type="radio" name="themes" value="green"/></td>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-purple.png"
-                     style="width:60px;height:30px;"/><br/><input
-                    type="radio" name="themes" value="purple"/></td>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-blue.png"
-                     style="width:60px;height:30px;"/><br/><input
-                    type="radio" name="themes" value="blue"/></td>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-yellow.png"
-                     style="width:60px;height:30px;"/><br/><input
-                    type="radio" name="themes" value="yellow"/></td>
+            <td>
+                <img src="../../topjui/image/skin/skin-coolblack.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="black" class="topjuiTheme"/>
+            </td>
+            <td>
+                <img src="../../topjui/image/skin/skin-red.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="red" class="topjuiTheme"/>
+            </td>
+            <td>
+                <img src="../../topjui/image/skin/skin-green.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="green" class="topjuiTheme"/>
+            </td>
+            <td><img src="../../topjui/image/skin/skin-purple.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="purple" class="topjuiTheme"/>
+            </td>
+            <td><img src="../../topjui/image/skin/skin-blue.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="blue" class="topjuiTheme"/>
+            </td>
+            <td>
+                <img src="../../topjui/image/skin/skin-yellow.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="yellow" class="topjuiTheme"/>
+            </td>
         </tr>
         <tr>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-coolblacklight.png"
-                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="blacklight"/></td>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-redlight.png"
-                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="redlight"/></td>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-greenlight.png"
-                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="greenlight"/></td>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-purplelight.png"
-                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="purplelight"/></td>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-bluelight.png"
-                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="bluelight"/></td>
-            <td><img src="../../topjui/themes/ewsd/skin/skin-yellowlight.png"
-                     style="width:60px;height:30px;"/><br/><input type="radio" name="themes" value="yellowlight"/></td>
+            <td>
+                <img src="../../topjui/image/skin/skin-coolblacklight.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="blacklight" class="topjuiTheme"/>
+            </td>
+            <td>
+                <img src="../../topjui/image/skin/skin-redlight.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="redlight" class="topjuiTheme"/>
+            </td>
+            <td>
+                <img src="../../topjui/image/skin/skin-greenlight.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="greenlight" class="topjuiTheme"/>
+            </td>
+            <td>
+                <img src="../../topjui/image/skin/skin-purplelight.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="purplelight" class="topjuiTheme"/>
+            </td>
+            <td>
+                <img src="../../topjui/image/skin/skin-bluelight.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="bluelight" class="topjuiTheme"/>
+            </td>
+            <td>
+                <img src="../../topjui/image/skin/skin-yellowlight.png" style="width:60px;height:30px;"/><br/>
+                <input type="radio" name="themes" value="yellowlight" class="topjuiTheme"/>
+            </td>
         </tr>
     </table>
     <table style="width: 100%; padding: 20px; line-height: 30px; text-align: center;">
@@ -206,10 +223,6 @@
             </td>
         </tr>
     </table>
-    <div class="endbtndiv">
-        <a id="btnSave" href="javascript:SetThemes()" class="easyui-linkbutton btns">保存</a>
-        <a id="btnReturn" href="javascript:$('#ModalStyle').dialog('close')" class="easyui-linkbutton btnc">取消</a>
-    </div>
 </div>
 
 <form id="modifyPassword"></form>
