优化左侧导航panel-header字体颜色

--- a/demo/html/complex/treegrid.html
+++ b/demo/html/complex/treegrid.html
@@ -10,7 +10,7 @@
     <link type="text/css" href="../../topjui/css/site.css" rel="stylesheet"/>
     <link type="text/css" href="../../topjui/css/style.css" rel="stylesheet"/>
     <!--<link type="text/css" href="../../topjui/css/topjui.all.min.css" rel="stylesheet">-->
-    <link type="text/css" href="../../topjui/themes/yushan/topjui.greenlight.css" rel="stylesheet" id="easyuiTheme"/>
+    <link type="text/css" href="../../topjui/themes/yushan/topjui.red.css" rel="stylesheet" id="easyuiTheme"/>
     <link type="text/css" href="../../topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- jQuery核心 -->
     <script type="text/javascript" src="../../topjui/plugins/easyui/jquery.min.js"></script>
