调整文档链接

--- a/demo/html/portal/index.html
+++ b/demo/html/portal/index.html
@@ -85,7 +85,7 @@
 
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-edge"></i> 关于TopJUI
+                            <i class="fa fa-edge"></i> TopJUI前端框架
                         </div>
                         <div class="panel-body">
                             <ul>
@@ -147,7 +147,7 @@
 
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-edge"></i> 动态演示
+                            <i class="fa fa-edge"></i> TopJUI与JAVA整合项目
                         </div>
                         <div class="panel-body">
                             <ul>
