--- a/demo/html/complex/edit.html
+++ b/demo/html/complex/edit.html
@@ -35,7 +35,7 @@
             <td>
                 <input type="text" name="spec"
                        data-toggle="topjui-combobox"
-                       data-options="valueField:'code',
+                       data-options="panelWidth:200,valueField:'code',
                    url:contextPath + '/json/dictionary/models.json'">
             </td>
         </tr>
