--- a/demo/html/extend/editor_index.html
+++ b/demo/html/extend/editor_index.html
@@ -60,7 +60,7 @@
 			   {id:'contentAddEditor',field:'content'}
 		   ],
            buttonsGroup:[
-               {text:'保存',url:contextPath + '/json/response/success.json',iconCls:'icon-add',handler:'ajaxForm'}
+               {text:'保存',url:contextPath + '/json/response/success.json',iconCls:'fa fa-plus',handler:'ajaxForm'}
            ]
        }">打开文字编辑器窗口</a>
 </div>
