--- a/demo/html/extend/uploader.html
+++ b/demo/html/extend/uploader.html
@@ -7,7 +7,7 @@
                 <input type="hidden" id="puuid" name="puuid" value="${param.puuid}">
                 <div id="chooseFile">选择文件</div>
             </div>
-            <a class="easyui-linkbutton" id="addUpFile" data-options="iconCls:'icon-add',height:37"
+            <a class="easyui-linkbutton" id="addUpFile" data-options="iconCls:'fa fa-plus',height:37"
                style="" onclick="uploadToServer();">开始上传</a>
             <a class="easyui-linkbutton" id="removeUpFile" data-options="iconCls:'icon-no',height:37"
                style="" onclick="removeFile();">移除文件</a>
