--- a/demo/index.html
+++ b/demo/index.html
@@ -8,10 +8,10 @@
     <!-- 浏览器标签图片 -->
     <link rel="shortcut icon" href="./topjui/image/favicon.ico"/>
     <!-- TopJUI样式 -->
-    <link type="text/css" href="./topjui/themes/yushan/topjui.base.css" rel="stylesheet"/>
+    <!--<link type="text/css" href="./topjui/themes/yushan/topjui.base.css" rel="stylesheet"/>
     <link type="text/css" href="./topjui/css/site.css" rel="stylesheet"/>
-    <link type="text/css" href="./topjui/css/style.css" rel="stylesheet"/>
-    <!--<link type="text/css" href="./topjui/css/topjui.all.min.css" rel="stylesheet">-->
+    <link type="text/css" href="./topjui/css/style.css" rel="stylesheet"/>-->
+    <link type="text/css" href="./topjui/css/topjui.all.min.css" rel="stylesheet">
     <link type="text/css" href="/topjui/themes/yushan/topjui.redlight.css" rel="stylesheet" id="easyuiTheme"/>
     <link type="text/css" href="./topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- jQuery引入 -->
