--- a/demo/html/extend/uploader_index.html
+++ b/demo/html/extend/uploader_index.html
@@ -5,10 +5,10 @@
     <!-- 避免IE使用兼容模式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="renderer" content="webkit">
-    <!-- EasyUI样式 -->
-    <link type="text/css" rel="stylesheet" href="../../topjui/themes/default/easyui.css">
     <!-- TopJUI样式 -->
-    <link type="text/css" rel="stylesheet" href="../../topjui/css/topjui.all.min.css">
+    <link type="text/css" href="../../topjui/css/topjui.all.min.css" rel="stylesheet">
+    <link type="text/css" href="../../topjui/themes/yushan/topjui.red.css" rel="stylesheet" id="easyuiTheme"/>
+    <link type="text/css" href="../../topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- jQuery核心 -->
     <script type="text/javascript" src="../../topjui/plugins/easyui/jquery.min.js"></script>
     <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.cookie.js"></script>
@@ -49,7 +49,7 @@
        }" style="display:none">
     <a href="javascript:void(0)"
        data-toggle="topjui-uploader"
-       data-options="iconCls:'icon-add',
+       data-options="iconCls:'fa fa-plus',
        parentGrid:{
            type:'datagrid',
            id:'productDg',
