--- a/demo/html/grid/edatagrid.html
+++ b/demo/html/grid/edatagrid.html
@@ -5,10 +5,10 @@
     <!-- 避免IE使用兼容模式 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="renderer" content="webkit">
-    <!-- EasyUI样式 -->
-    <link type="text/css" rel="stylesheet" href="../../topjui/themes/default/easyui.css">
     <!-- TopJUI样式 -->
-    <link type="text/css" rel="stylesheet" href="../../topjui/css/topjui.all.min.css">
+    <link type="text/css" href="../../topjui/css/topjui.all.min.css" rel="stylesheet">
+    <link type="text/css" href="../../topjui/themes/yushan/topjui.red.css" rel="stylesheet" id="easyuiTheme"/>
+    <link type="text/css" href="../../topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <!-- jQuery核心 -->
     <script type="text/javascript" src="../../topjui/plugins/easyui/jquery.min.js"></script>
     <script type="text/javascript" src="../../topjui/plugins/jquery/jquery.cookie.js"></script>
@@ -30,12 +30,12 @@
     <thead>
     <tr>
         <th data-options="field:'uuid',title:'UUID',checkbox:true"></th>
-        <th data-options="field:'type',title:'类型',sortable:true,editor:{type:'textbox',options:{required:true}}"></th>
-        <th data-options="field:'sort',title:'排序',sortable:true,width:60,editor:{type:'numberspinner',options:{required:true}}"></th>
-        <th data-options="field:'name',title:'名称',sortable:true,editor:{type:'textbox',options:{required:true}}"></th>
-        <th data-options="field:'code',title:'代码',sortable:true,editor:{type:'textbox',options:{required:true}}"></th>
-        <th data-options="field:'value',title:'值',sortable:true,editor:{type:'textbox',options:{required:true}}"></th>
-        <th data-options="field:'description',title:'描述',sortable:true,editor:{type:'textbox',options:{required:true}}"></th>
+        <th data-options="field:'type',title:'类型',sortable:true,editor:{type:'textbox',options:{required:true,height:34}}"></th>
+        <th data-options="field:'sort',title:'排序',sortable:true,width:60,editor:{type:'numberspinner',options:{required:true,height:34}}"></th>
+        <th data-options="field:'name',title:'名称',sortable:true,editor:{type:'textbox',options:{required:true,height:34}}"></th>
+        <th data-options="field:'code',title:'代码',sortable:true,editor:{type:'textbox',options:{required:true,height:34}}"></th>
+        <th data-options="field:'value',title:'值',sortable:true,editor:{type:'textbox',options:{required:true,height:34}}"></th>
+        <th data-options="field:'description',title:'描述',sortable:true,editor:{type:'textbox',options:{required:true,height:34}}"></th>
         <th data-options="field:'creator',title:'创建人',sortable:true"></th>
         <th data-options="field:'createTime',title:'创建时间',sortable:true"></th>
     </tr>
