优化对话框按钮栏样式

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,9 +11,9 @@
     <!-- 浏览器标签图片 -->
     <link rel="shortcut icon" href="./topjui/image/favicon.ico"/>
     <!-- TopJUI框架样式 -->
-    <link type="text/css" href="./topjui/themes/default/topjui.base.css" rel="stylesheet"/>
-    <link type="text/css" href="./topjui/css/topjui.style.css" rel="stylesheet"/>
-    <!--<link type="text/css" href="./topjui/css/topjui.core.min.css" rel="stylesheet">-->
+    <!--<link type="text/css" href="./topjui/themes/default/topjui.base.css" rel="stylesheet"/>
+    <link type="text/css" href="./topjui/css/topjui.style.css" rel="stylesheet"/>-->
+    <link type="text/css" href="./topjui/css/topjui.core.min.css" rel="stylesheet">
     <link type="text/css" href="./topjui/themes/default/topjui.redlight.css" rel="stylesheet" id="dynamicTheme"/>
     <!-- FontAwesome字体图标 -->
     <link type="text/css" href="./topjui/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
